--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
    height: 50px;
    background-color: rgba(102, 16, 83, 0.698);
    color: white;
@@ -242,4 +242,4 @@
      height: 0.5px;
      width: 300px;
    }
- }
+ } */
